prevent known secondaries card from being cut off on the right hand side

--- a/ui/app/styles/components/replication-summary.scss
+++ b/ui/app/styles/components/replication-summary.scss
@@ -1,6 +1,6 @@
 .replication {
   .selectable-card-container {
-    grid-template-columns: 1fr, minmax(400px, 2fr);
+    grid-template-columns: 1fr minmax(240px, 2fr);
     grid-template-rows: initial;
     margin: 2rem 0 2rem 0;
   }
